# Lite-Mapper

./: CMakeLists.txt  KeyMapperCpp.iss
.github/workflows/: build-windows-cpp.yml
src/: CMakeLists.txt  keyhook.cpp  keyhook.h
src/app/: antidebug.cpp  antidebug.h  config.cpp  config.h  main.cpp  manifest.xml  protection.cpp  protection.h  protection_config.h  tray.cpp  tray.h  ui.cpp  ui.h
src/app_qt/: SettingsWindow.cpp  SettingsWindow.h  qt_main.cpp  resources.qrc
